--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,25 +1,9 @@
+orbs:
+  node: circleci/node@4.0.0
+
 version: 2.1
-jobs:
-  build:
-    docker:
-      - image: circleci/node:14.15.1-browsers
-  
-    working_directory: ~/repo
-steps:
-      - checkout
-      
-      - restore_cache:
-        keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          - v1-dependencies-
-      
-      - run: yarn install
-   
-      - save_cache:
-        paths:
-          - node_modules
-          - ~/.npm 
-          - ~/.cache
-        key: v1-dependencies-{{ checksum "package.json" }}
-    
-      - run: yarn test
+
+workflows:
+  app-tests:
+    jobs:
+      - node/test
