--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,3 +7,16 @@ workflows:
   app-tests:
     jobs:
       - node/test
+orbs:
+   heroku: circleci/heroku@1.2.3 # Use the Heroku orb in your config
+
+ workflows:
+   heroku_deploy:
+     jobs:
+       - build
+       - heroku/deploy-via-git:
+           requires:
+             - build # only run deploy-via-git job if the build job has completed
+           filters:
+             branches:
+               only: master # only run deploy-via-git job on master branch
