--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,11 @@
-version: 2.1
 orbs:
-   heroku: circleci/heroku@1.2.3 # Use the Heroku orb in your config
-
+  heroku: circleci/heroku@1.2.3
+version: 2.1
 workflows:
-   heroku_deploy:
-     jobs:
-       - build
-       - heroku/deploy-via-git:
-           requires:
-             - build # only run deploy-via-git job if the build job has completed
-           filters:
-             branches:
-               only: master # only run deploy-via-git job on master branch
+  heroku_deploy:
+    jobs:
+      - heroku/deploy-via-git:
+          post-steps:
+            - run: your-database-migration-command
+          pre-steps:
+            - run: command-that-run-before-deploying
