--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,6 @@ workflows:
   heroku_deploy:
     jobs:
       - heroku/deploy-via-git:
-          post-steps:
-            - run: your-database-migration-command
-          pre-steps:
-            - run: command-that-run-before-deploying
+         filters:
+           brances:
+             only: master
